// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a customer account should not be able to remove a group 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "FORBIDDEN",
      "exception": Object {
        "details": Object {},
        "error": "access-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Access Denied",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Access Denied",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot default groups, owner, shop-manager, guest and customer 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "details": Object {},
        "error": "accedd-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove default group with id shopManagerGroup.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove default group with id shopManagerGroup.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot default groups, owner, shop-manager, guest and customer 2`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "details": Object {},
        "error": "accedd-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove default group with id ownerGroup.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove default group with id ownerGroup.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot default groups, owner, shop-manager, guest and customer 3`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "details": Object {},
        "error": "accedd-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove default group with id guestGroup.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove default group with id guestGroup.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot default groups, owner, shop-manager, guest and customer 4`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "details": Object {},
        "error": "accedd-denied",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove default group with id customerGroup.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove default group with id customerGroup.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;

exports[`an admin account cannot remove a group unless there is a default customer group 1`] = `
Array [
  Object {
    "extensions": Object {
      "code": "INTERNAL_SERVER_ERROR",
      "exception": Object {
        "details": Object {},
        "error": "server-error",
        "eventData": Object {},
        "isClientSafe": true,
        "reason": "Cannot remove group testGroup. Default \\"customer\\" group doesn't exist to move users to.",
      },
    },
    "locations": Array [
      Object {
        "column": 5,
        "line": 3,
      },
    ],
    "message": "Cannot remove group testGroup. Default \\"customer\\" group doesn't exist to move users to.",
    "path": Array [
      "removeAccountGroup",
      "group",
    ],
  },
]
`;
